<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="@dimen/margin_left_dp"
        android:layout_marginEnd="@dimen/margin_right_dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextTitle"
                tools:text="@string/message"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/vLine1"
                android:background="@color/colorBlack"
                android:alpha="0.4"
                android:layout_marginTop="10dp"
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tvContent"
                />

            <TextView
                android:id="@+id/tvContent"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="Do you want to Logout>"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvYes"
                app:layout_constraintTop_toBottomOf="@id/vLine1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/vLine2"
                android:layout_width="0dp"
                android:text="@string/yes"
                android:textColor="@color/colorPrimary"
                style="@style/TextTitle"
                android:gravity="center"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/tvOK"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vLine1"
                android:layout_width="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                style="@style/TextTitle"
                android:gravity="center"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/tvNo"
                app:layout_constraintTop_toBottomOf="@id/vLine1"
                app:layout_constraintStart_toEndOf="@id/vLine2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:text="@string/no"
                android:textColor="@color/colorError"
                style="@style/TextTitle"
                android:gravity="center"
                android:layout_height="40dp"/>

            <View
                android:id="@+id/vLine2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/colorBlack"
                android:alpha="0.4"
                app:layout_constraintTop_toBottomOf="@id/vLine1"
                android:layout_width="0.5dp"
                android:layout_height="40dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>