<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingBottom="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/imgLogo"
            app:layout_constraintStart_toStartOf="@id/imgLogo"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <LinearLayout
            android:id="@+id/llDomain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"

            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvAppName">

            <EditText
                android:id="@+id/etDomain"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:hint="@string/domain_company"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorWhite" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/llDomain">

            <EditText
                android:id="@+id/etUserId"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:hint="@string/user_id"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorWhite" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/llMail">

            <EditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imgEye"
                android:layout_marginEnd="20dp"
                android:padding="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_invisibility"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <View
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorWhite" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@id/llPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>