<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/drawerLayout"
    android:background="@color/colorWhite"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:openDrawer="start"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Header-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/imgMenu"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_baseline_menu_24"
                android:padding="15dp"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent" />

            <TextView
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/imgChoose"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/logo"
                android:padding="15dp"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvNoData"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_data"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <FrameLayout
            android:id="@+id/frShow"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCamera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="25dp"
            android:layout_width="50dp"
            android:layout_height="50dp">
            <ImageView
                android:padding="10dp"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_baseline_photo_camera_24"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_gravity="left"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/csHeader"
                android:background="@color/colorPrimaryDark"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardAvatar"
                    android:layout_margin="15dp"
                    app:cardCornerRadius="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="48dp"
                    android:layout_height="48dp">

                    <ImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvName"
                    tools:text="Anderson Matt"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toTopOf="@id/cardAvatar"
                    app:layout_constraintStart_toEndOf="@id/cardAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvPosition"
                    tools:text="Android Developer"
                    android:textSize="12sp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tvName"
                    app:layout_constraintStart_toEndOf="@id/cardAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Local Gallery-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardLocalGallery"
                app:layout_constraintTop_toBottomOf="@id/csHeader"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="18dp"
                android:layout_width="36dp"
                android:layout_height="36dp">
                <ImageView
                    android:padding="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:src="@drawable/ic_baseline_image_24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvLocalGallery"
                android:layout_marginStart="20dp"
                android:text="@string/local_gallery"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/cardLocalGallery"
                app:layout_constraintStart_toEndOf="@id/cardLocalGallery"
                app:layout_constraintTop_toTopOf="@id/cardLocalGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/vLocal"
                android:layout_marginTop="20dp"
                android:background="@color/colorBlack"
                android:alpha="0.4"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/cardLocalGallery"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <!--Local File-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardLocalFile"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/vLocal"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="18dp"
                android:layout_width="36dp"
                android:layout_height="36dp">
                <ImageView
                    android:padding="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:src="@drawable/ic_baseline_attach_file_24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvLocalFile"
                android:layout_marginStart="20dp"
                android:text="@string/local_file"
                android:textSize="15sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/cardLocalFile"
                app:layout_constraintStart_toEndOf="@id/cardLocalFile"
                app:layout_constraintTop_toTopOf="@id/cardLocalFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/vLocalFile"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:background="@color/colorBlack"
                android:alpha="0.4"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/cardLocalFile"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <!--CrewPhoto-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardCrewPhoto"
                app:layout_constraintTop_toBottomOf="@id/vLocalFile"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="18dp"
                android:layout_width="36dp"
                android:layout_height="36dp">
                <ImageView
                    android:padding="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:src="@drawable/logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvCrewPhoto"
                android:layout_marginStart="20dp"
                android:text="@string/app_name"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/cardCrewPhoto"
                app:layout_constraintStart_toEndOf="@id/cardCrewPhoto"
                app:layout_constraintTop_toTopOf="@id/cardCrewPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/vCrewPhoto"
                android:layout_marginTop="20dp"
                android:background="@color/colorBlack"
                android:alpha="0.4"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/tvCrewPhoto"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <!--Logout-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardLogout"
                app:layout_constraintTop_toBottomOf="@id/vAbout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="18dp"
                android:layout_width="36dp"
                android:layout_height="36dp">
                <ImageView
                    android:padding="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:src="@drawable/ic_baseline_logout_24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvLogout"
                android:layout_marginStart="20dp"
                android:text="@string/logout"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/cardLogout"
                app:layout_constraintStart_toEndOf="@id/cardLogout"
                app:layout_constraintTop_toTopOf="@id/cardLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/vLogout"
                android:layout_marginTop="20dp"
                android:background="@color/colorBlack"
                android:alpha="0.4"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/cardLogout"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <!--About-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardAbout"
                app:layout_constraintTop_toBottomOf="@id/vCrewPhoto"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="20dp"
                app:cardCornerRadius="18dp"
                android:layout_width="36dp"
                android:layout_height="36dp">
                <ImageView
                    android:padding="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:src="@drawable/ic_baseline_info_24"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvAbout"
                android:layout_marginStart="20dp"
                android:text="@string/about_crewphoto"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/cardAbout"
                app:layout_constraintStart_toEndOf="@id/cardAbout"
                app:layout_constraintTop_toTopOf="@id/cardAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/vAbout"
                android:layout_marginTop="20dp"
                android:background="@color/colorBlack"
                android:alpha="0.4"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/cardAbout"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>